# Huaye

./: Architecture.md  Cargo.toml  README.md  build.rs  strawberry_theme.json
.github/workflows/: rust.yml
src/: app.rs  components.rs  core.rs  main.rs  modules.rs
src/components/: decorations.rs  three_panel.rs
src/core/: config.rs  data_pipeline.rs  events.rs  logger.rs  module.rs  state.rs  theme.rs
src/modules/: dashboard.rs  settings.rs  terminal.rs
